header navigation alignment fixes

--- a/src/components/taxon-filters/styles/filter-bar.scss
+++ b/src/components/taxon-filters/styles/filter-bar.scss
@@ -5,6 +5,7 @@
 .headerNavContainer {
   width: 100%;
   margin: 0;
+  margin-left: -10px;
   padding: 0;
   display: table;
 }
